--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@astrojs/mdx": "^1.1.4",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
+    "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.5.2",
+    "node": "^21.1.0",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
 }
